[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "python_threadsafe_logger"
version = "2.1.0"
description = "Une librairie Python fournissant des loggers métier thread-safe avec des backends asynchrones."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv>=1.0.0",
    "python_sqlite_async @ git+https://github.com/venantvr-pubsub/Python.SQLite.Async.git",
    "python_jsonl_async @ git+https://github.com/venantvr-pubsub/Python.JSONL.Async.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "setuptools",
]
